--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project name="memcached" default="package" basedir=".">
 
 	<property name="project.title"   value="java memcached client" />
-	<property name="code.dir"        value="src/com/whalin/memcached" />
+	<property name="code.dir"        value="src/com/meetup/memcached" />
 	<property name="doc.dir"         value="doc" />
 	<property name="src.dir"         value="src" />
 	<property name="build.dir"       value="classes" />
@@ -44,12 +44,12 @@
 	<target name="setup">
 		<mkdir dir="memcached-${ver}"/>
 		<mkdir dir="memcached-${ver}/javadocs"/>
-		<mkdir dir="memcached-${ver}/src/com/whalin/memcached"/>
+		<mkdir dir="memcached-${ver}/src/com/meetup/memcached"/>
 		<mkdir dir="memcached-${ver}/classes"/>
 		<mkdir dir="memcached-${ver}/doc"/>
 
 		<!-- copy source -->
-		<copy todir="memcached-${ver}/src/com/whalin/memcached">
+		<copy todir="memcached-${ver}/src/com/meetup/memcached">
 			<fileset dir="${code.dir}" defaultexcludes="true" excludes="**/*.xml **/*.swp **/*.swo"/>
         </copy>
 
@@ -67,13 +67,13 @@
 
 	<!-- if logger is log4j then need to filter to make sure import exists -->
 	<target name="log4j" if="log4j" depends="clean, setup">
-		<replace dir="memcached-${ver}/src/com/whalin/memcached" token="//import org.apache.log4j.Logger;" value="import org.apache.log4j.Logger;">
+		<replace dir="memcached-${ver}/src/com/meetup/memcached" token="//import org.apache.log4j.Logger;" value="import org.apache.log4j.Logger;">
 			<include name="**/*.java"/>
 		</replace>
 	</target>
 
 	<target name="logger" unless="log4j" depends="clean, setup">
-		<replace dir="memcached-${ver}/src/com/whalin/memcached" token="import org.apache.log4j.Logger;" value="//import org.apache.log4j.Logger;">
+		<replace dir="memcached-${ver}/src/com/meetup/memcached" token="import org.apache.log4j.Logger;" value="//import org.apache.log4j.Logger;">
 			<include name="**/*.java"/>
 		</replace>
 	</target>
@@ -86,7 +86,7 @@
 
 		<javadoc sourcepath="memcached-${ver}/src"
 			destdir="memcached-${ver}/javadocs"
-			packagenames= "com.whalin.*"
+			packagenames= "com.meetup.*"
 			author= "true"
 			private="true"
 			version="true"
