--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,7 @@ dist/
 scratch/
 .cachedir/
 memcached-release*
+/java_memcached-release_3.0.0.jar
+/java_memcached-release_2.6.0.zip
+/java_memcached-release_2.6.0.jar
+/java_memcached-release_test_2.6.0.jar
