--- a/build.properties
+++ b/build.properties
@@ -33,9 +33,10 @@ build.dir=classes
 test.build.dir=testclasses
 build.instr.dir=classesinstr
 project=java_memcached-release
-ver=2.5.3
+ver=2.6.0
 junit.jar=lib/junit.jar
-log4j.jar=lib/log4j.jar
+slf4japi.jar=lib/slf4j-api-1.6.1.jar
+slf4jsimple.jar=lib/slf4j-simple-1.6.1.jar
 emma.dir=lib
 emma.enabled=true
 report.dir=report
