--- a/build.properties
+++ b/build.properties
@@ -27,8 +27,8 @@
 # THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #-------------------------------------------------------------------------------
 doc.dir=doc
-src.dir=src/main
-test.dir=src/test
+src.dir=src/main/java
+test.dir=src/test/java
 build.dir=classes
 test.build.dir=testclasses
 build.instr.dir=classesinstr
