--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,6 @@ dist/
 scratch/
 .cachedir/
 memcached-release*
-/java_memcached-release_3.0.0.jar
-/java_memcached-release_2.6.0.zip
-/java_memcached-release_2.6.0.jar
-/java_memcached-release_test_2.6.0.jar
 /bin
 /target
+/java_memcached-release*
