--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
-#Fri Sep 30 12:12:42 CST 2011
+#Fri Nov 25 11:05:34 CST 2011
 eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/test/java=UTF-8
+encoding/<project>=UTF-8
