Timeout workaround for hanging threads under load

--- a/build.properties
+++ b/build.properties
@@ -33,7 +33,7 @@ build.dir=classes
 test.build.dir=testclasses
 build.instr.dir=classesinstr
 project=java_memcached-release
-ver=2.6.3
+ver=2.6.3p
 junit.jar=lib/junit.jar
 slf4japi.jar=lib/slf4j-api-1.6.1.jar
 slf4jsimple.jar=lib/slf4j-simple-1.6.1.jar
